name:                 sdl-canvas
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Graphics
build-type:           Simple
cabal-version:        >= 1.10

executable sdl-canvas
  main-is:              Main.hs
  other-modules:
    Draw
    Draw.SDL
    Draw.Canvas
    Draw.Util
  if impl(ghcjs)
    cpp-options:        -DCANVAS
  build-depends:
    base >= 4.7 && < 4.8
  if !impl(ghcjs)
    build-depends:
      sdl2 == 1.1.1
  if impl(ghcjs)
    build-depends:
      ghcjs-base == 0.1.0.0
  hs-source-dirs:       src
  default-language:     Haskell2010
  js-sources:           js/canvas.js
  ghc-options:          -Wall

  if !impl(ghcjs)
    extra-libraries:
      SDL2_gfx
    includes:
      SDL2_gfxPrimitives.h
